# cpp_secureAndskill

./: .gitignore
_CommonLib/: Log.cpp  Log.h  _CommonLib.cpp  _CommonLib.vcxproj  _CommonLib.vcxproj.filters
lecture-04-lib/: StringFunc.cpp
lecture02/: Lecture02.rc  Lecture02.sln  Lecture02.vcxproj  Lecture02.vcxproj.filters  main.cpp  resource.h
lecture03/: main.cpp  pch.h  systemprogramming03.sln  systemprogramming03.vcxproj
lecture03/systempr.b190b6ae/ReleaseMT/: systemprogramming03.exe.recipe
lecture04/: CMakeLists.txt
lecture04/lecture-04/: CMakeLists.txt  Makefile  lecture-04.sln  lecture-04.vcxproj  main.cpp  pch.h
lecture04/lecture-04-lib/: CMakeLists.txt  CommonFunc.cpp  CommonFunc.h  Makefile  StringFunc.cpp  StringFunc.h  lecture-04-lib.cpp  lecture-04-lib.h  lecture-04-libA.vcxproj  lecture-04-libA.vcxproj.filters  lecture-04-libW.vcxproj  pch.h
lecture05/: lecture05.sln  lecture05.vcxproj  main.cpp  pch.h
lecture06/: lecture06.sln  lecture06.vcxproj  lecture06.vcxproj.filters  main.cpp  pch.h  report.h
lecture07/: GlobalRingBuffer.cpp  GlobalRingBuffer.h  lecture07.sln  lecture07.vcxproj  lecture07.vcxproj.filters  main.cpp  pch.h
lecture08/: lecture08.sln  lecture08.vcxproj  main.cpp  packet_protocol.h
lecture08/tmpp/: start.cpp
